--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
   <body>
     <header id="top">
       <h1>Prework Study Guide</h1>
+
+     
       <img
         src="./assets/bowtie-cat.png"
         alt="Profile image of cat wearing a bow tie."
       />
     </header>
     <main>
-      <!-- Student code goes here -->
+     <h2> CSS</h2>
     </main>
 
     <footer>
