--- a/index.html
+++ b/index.html
@@ -18,9 +18,28 @@
       />
     </header>
     <main>
-     <h2> CSS</h2>
+     
     </main>
-
+    <section class="card" id="html-section">
+      <h2>HTML</h2>
+      <ul>
+        <li>Enter your HTML notes here</li>
+      </ul>
+ 
+    <section class="card" id="css-section">
+ 
+     <h2>CSS</h2>
+      <ul>
+        <li>Enter your CSS notes here</li>
+      </ul>
+ 
+    <section class="card" id="git-section">
+ 
+    </section>
+ 
+    <section class="card" id="javascript-section">
+ 
+    </section>
     <footer>
       <p>I can code!</p>
     </footer>
