--- a/index.html
+++ b/index.html
@@ -23,22 +23,28 @@
     <section class="card" id="html-section">
       <h2>HTML</h2>
       <ul>
-        <li>Enter your HTML notes here</li>
+        <li>The head element contains information about the webpage</li>
+        <li> The body element represents the visible content shown</li>
       </ul>
  
     <section class="card" id="css-section">
  
      <h2>CSS</h2>
       <ul>
-        <li>Enter your CSS notes here</li>
+        <li>CSS is a great way to organize text within a webpage /li>
       </ul>
  
     <section class="card" id="git-section">
  
-    </section>
+    <ul>
+      <li> git status: checks what branch we are currently on</li>
+      <li> git checkout -b branch-name: creates a new branch and switches to it</li>
+    </ul>
  
     <section class="card" id="javascript-section">
- 
+      <ul>
+        <li>JavaScript is a great tool to use to make applications and webpages more interactive</li>
+      </ul>
     </section>
     <footer>
       <p>I can code!</p>
