--- a/index.html
+++ b/index.html
@@ -24,17 +24,19 @@
       </ul>
  
     <section class="card" id="css-section">
-       <h2>CSS</h2>
+       <h3>CSS</h3>
       <ul>
         <li>CSS is a great way to organize text within a webpage /li>
       </ul>
  
     <section class="card" id="git-section">
+      <h4>Git</h4>
  <ul>
       <li> git status: checks what branch we are currently on</li>
       <li> git checkout -b branch-name: creates a new branch and switches to it</li>
     </ul>
   <section class="card" id="javascript-section">
+    <h5>JavaScript</h5>
       <ul>
         <li>JavaScript is a great tool to use to make applications and webpages more interactive</li>
       </ul>
