--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         src="./assets/bowtie-cat.png"
         alt="Profile image of cat wearing a bow tie."
       />
+      <header>
     </main>
     <section class="card" id="html-section">
       <h2>HTML</h2>
@@ -21,24 +22,27 @@
         <li>The head element contains information about the webpage</li>
         <li> The body element represents the visible content shown</li>
       </ul>
+      </section>
  
     <section class="card" id="css-section">
        <h3>CSS</h3>
       <ul>
         <li>CSS is a great way to organize text within a webpage /li>
       </ul>
- 
+ </section>
     <section class="card" id="git-section">
       <h4>Git</h4>
  <ul>
       <li> git status: checks what branch we are currently on</li>
       <li> git checkout -b branch-name: creates a new branch and switches to it</li>
     </ul>
+    </section>
   <section class="card" id="javascript-section">
     <h5>JavaScript</h5>
       <ul>
         <li>JavaScript is a great tool to use to make applications and webpages more interactive</li>
       </ul>
+      </section>
     <p>I can code!</p>
     </footer>
   </body>
