--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <header id="top">
       <h1>Prework Study Guide</h1>
        <img
-        src="./assets/bowtie-cat.png"
-        alt="Profile image of cat wearing a bow tie."
+        src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie."
       />
-      <header>
-    </main>
+    </header>
+    
+  </main>
     <section class="card" id="html-section">
       <h2>HTML</h2>
       <ul>
@@ -25,20 +25,20 @@
       </section>
  
     <section class="card" id="css-section">
-       <h3>CSS</h3>
+       <h2>CSS</h2>
       <ul>
         <li>CSS is a great way to organize text within a webpage /li>
       </ul>
  </section>
     <section class="card" id="git-section">
-      <h4>Git</h4>
+      <h2>Git</h2>
  <ul>
       <li> git status: checks what branch we are currently on</li>
       <li> git checkout -b branch-name: creates a new branch and switches to it</li>
     </ul>
     </section>
   <section class="card" id="javascript-section">
-    <h5>JavaScript</h5>
+    <h2>JavaScript</h2>
       <ul>
         <li>JavaScript is a great tool to use to make applications and webpages more interactive</li>
       </ul>
