--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section class="card" id="css-section">
        <h2>CSS</h2>
       <ul>
-        <li>CSS is a great way to organize text within a webpage /li>
+        <li>CSS is a great way to organize text within a webpage</li>
       </ul>
  </section>
     <section class="card" id="git-section">
