--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
        <h2>CSS</h2>
       <ul>
         <li>CSS is a great way to organize text within a webpage</li>
+        <li> I love CSS</li>
       </ul>
  </section>
     <section class="card" id="git-section">
