--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       </ul>
       </section>
     <p>I can code!</p>
+    <p>Baba Booey</p>
     </footer>
     <script src="./assets/script.js"></script>
   </body>
